--- a/conf/nginx/http.conf
+++ b/conf/nginx/http.conf
@@ -6,7 +6,7 @@ http {
   server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    rewrite ^/(.*)$ http://ctfd.test.com/$1 permanent;
+    rewrite ^/(.*)$ http://ctf-k8s.org/$1 permanent;
   }
   # Configuration containing list of application servers
   upstream app_servers {
@@ -15,7 +15,7 @@ http {
   server {
     listen 80;
     listen [::]:80;
-    server_name ctfd.test.com;
+    server_name ctf-k8s.org;
     gzip on;
     client_max_body_size 4G;
     # Handle Server Sent Events for Notifications
@@ -48,7 +48,7 @@ http {
   server {
     listen 80;
     listen [::]:80;
-    server_name *.dynamic.test.com;
+    server_name *.ctf-k8s.org;
     client_max_body_size 4G;
     location / {
       proxy_pass http://frps_servers;
