--- a/frps/frps.ini
+++ b/frps/frps.ini
@@ -2,6 +2,6 @@
 bind_addr = 0.0.0.0
 bind_port = 7000
 token = token123
-subdomain_host = dynamic.test.com
+subdomain_host = ctf-k8s.org
 vhost_http_port = 8009
 custom_404_page = /etc/frp/404.html
